2009-01-06  Donal K. Fellows  <dkf@users.sf.net>

	* tests/expr.test, tests/string.test: Eliminate non-ASCII characters.
	[Bugs 2006884, 2006879]

2009-01-03  Kevin B. Kenny  <kennykb@acm.org>:

	* library/clock.tcl (tcl::clock::add): Fixed error message formatting
	in the case where [clock add] is presented with a bad switch.
	* tests/clock.test (clock-65.1) Added a test case for the above
	problem [Bug 2481670].

2008-12-21  Don Porter  <dgp@users.sourceforge.net>

	*** 8.5.6 TAGGED FOR RELEASE ***

	* generic/tcl.h:	Bump to 8.5.6 for release.
	* library/init.tcl:
	* tools/tcl.wse.in:
	* unix/configure.in:
	* unix/tcl.spec:
	* win/configure.in:
	* README:

	* unix/configure:	autoconf-2.59
	* win/configure:

	* changes:	Update for 8.5.6 release.

	* library/tclIndex: Removed reference to no-longer-extant procedure
	'tclLdAout'.
	* doc/library.n: Corrected mention of 'auto_exec' to 'auto_execok'.
	[Patch 2114900] thanks to Stu Cassoff <stwo@users.sf.net>
	Backport of 2008-11-26 commit from Kevin Kenny.

	* win/tclWinThrd.c (TclpThreadCreate): We need to initialize the
	thread id variable to 0 as on 64 bit windows this is a pointer sized
	field while windows only fills it with a 32 bit value. The result is
	an inability to join the threads as the ids cannot be matched.
	Backport of 2008-10-13 commit from Pat Thoyts.

2008-12-15  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tclExecute.c (TEBC:INST_DICT_GET): Make sure that the result
	is empty when generating an error message. [Bug 2431847]

2008-12-12  Jan Nijtmans  <nijtmans@users.sf.net>

	* library/clock.tcl (ProcessPosixTimeZone): Fix time change in Eastern
	Europe (not 3:00 but 4:00 local time) [Bug 2207436]

2008-12-11  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIO.c (SetChannelFromAny and related): Modified the
	* tests/io.test: internal representation of the tclChannelType to
	contain not only the ChannelState pointer, but also a reference to the