@@ -1,5 +1,8 @@
 2009-01-06  Donal K. Fellows  <dkf@users.sf.net>
 
+	* generic/tclDictObj.c (DictIncrCmd): Corrected twiddling in internals
+	of dictionaries so that literals can't get destroyed.
+
 	* tests/expr.test, tests/string.test: Eliminate non-ASCII characters.
 	[Bugs 2006884, 2006879]
 
